--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>Little Lemon</title>
-        <meta name="desciption" content="A brief desciption">
-        <meta name="author" content="Little Lemon Restaurant">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="css/styles.css">
+    <title>Little Lemon</title>
+    <meta name="desciption" content="A brief desciption">
+    <meta name="author" content="Little Lemon Restaurant">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    </head>
-    <body>
+    <link rel="stylesheet" href="css/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
+
+<body>
 
     <header>
         <img src="logo.png" alt="logo">
@@ -33,7 +35,15 @@
         <img src="header-img.webp" alt="header-img" class="background-image">
         <article class="article-overlay">
             <h1>April month 50% off on all food!</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis, ex in semper rutrum, nulla ante mollis massa, eu ullamcorper justo lacus sit amet enim. Sed convallis dapibus felis, nec convallis orci efficitur eu. Nulla id ex ut mi pharetra malesuada. Fusce at odio ac lorem vestibulum congue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras et eros ut magna malesuada tincidunt sit amet ac purus. Morbi sollicitudin elementum ornare. Morbi lacinia suscipit dignissim. Fusce mollis eu neque sed tincidunt. Aliquam lectus arcu, interdum cursus dolor eu, ultrices dictum nisi. Ut et dolor facilisis, pellentesque elit vel, pretium risus. Praesent viverra, risus non efficitur dignissim, ligula sapien rhoncus lorem, vel elementum elit urna et neque. Cras ac ipsum ipsum. Praesent tempor porttitor imperdiet. Vivamus quis pellentesque quam, eget convallis purus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis, ex in semper rutrum, nulla ante
+                mollis massa, eu ullamcorper justo lacus sit amet enim. Sed convallis dapibus felis, nec convallis orci
+                efficitur eu. Nulla id ex ut mi pharetra malesuada. Fusce at odio ac lorem vestibulum congue. Vestibulum
+                ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras et eros ut magna
+                malesuada tincidunt sit amet ac purus. Morbi sollicitudin elementum ornare. Morbi lacinia suscipit
+                dignissim. Fusce mollis eu neque sed tincidunt. Aliquam lectus arcu, interdum cursus dolor eu, ultrices
+                dictum nisi. Ut et dolor facilisis, pellentesque elit vel, pretium risus. Praesent viverra, risus non
+                efficitur dignissim, ligula sapien rhoncus lorem, vel elementum elit urna et neque. Cras ac ipsum ipsum.
+                Praesent tempor porttitor imperdiet. Vivamus quis pellentesque quam, eget convallis purus.</p>
         </article>
     </section>
 
@@ -41,21 +51,45 @@
         <article class="ourNewMenu">
             <h2>Our New Menu</h2>
             <img src="new-menu.webp" alt="new-menu">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis, ex in semper rutrum, nulla ante mollis massa, eu ullamcorper justo lacus sit amet enim. Sed convallis dapibus felis, nec convallis orci efficitur eu. Nulla id ex ut mi pharetra malesuada. Fusce at odio ac lorem vestibulum congue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras et eros ut magna malesuada tincidunt sit amet ac purus. Morbi sollicitudin elementum ornare. Morbi lacinia suscipit dignissim. Fusce mollis eu neque sed tincidunt. Aliquam lectus arcu, interdum cursus dolor eu, ultrices dictum nisi. Ut et dolor facilisis, pellentesque elit vel, pretium risus. Praesent viverra, risus non efficitur dignissim, ligula sapien rhoncus lorem, vel elementum elit urna et neque. Cras ac ipsum ipsum. Praesent tempor porttitor imperdiet. Vivamus quis pellentesque quam, eget convallis purus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis, ex in semper rutrum, nulla ante
+                mollis massa, eu ullamcorper justo lacus sit amet enim. Sed convallis dapibus felis, nec convallis orci
+                efficitur eu. Nulla id ex ut mi pharetra malesuada. Fusce at odio ac lorem vestibulum congue. Vestibulum
+                ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras et eros ut magna
+                malesuada tincidunt sit amet ac purus. Morbi sollicitudin elementum ornare. Morbi lacinia suscipit
+                dignissim. Fusce mollis eu neque sed tincidunt. Aliquam lectus arcu, interdum cursus dolor eu, ultrices
+                dictum nisi. Ut et dolor facilisis, pellentesque elit vel, pretium risus. Praesent viverra, risus non
+                efficitur dignissim, ligula sapien rhoncus lorem, vel elementum elit urna et neque. Cras ac ipsum ipsum.
+                Praesent tempor porttitor imperdiet. Vivamus quis pellentesque quam, eget convallis purus.</p>
             <a href="new-menu">Check out our new-menu!</a>
         </article>
 
         <article class="bookATable">
             <h2>Book a table</h2>
             <img src="book-table.webp" alt="book-table">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis, ex in semper rutrum, nulla ante mollis massa, eu ullamcorper justo lacus sit amet enim. Sed convallis dapibus felis, nec convallis orci efficitur eu. Nulla id ex ut mi pharetra malesuada. Fusce at odio ac lorem vestibulum congue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras et eros ut magna malesuada tincidunt sit amet ac purus. Morbi sollicitudin elementum ornare. Morbi lacinia suscipit dignissim. Fusce mollis eu neque sed tincidunt. Aliquam lectus arcu, interdum cursus dolor eu, ultrices dictum nisi. Ut et dolor facilisis, pellentesque elit vel, pretium risus. Praesent viverra, risus non efficitur dignissim, ligula sapien rhoncus lorem, vel elementum elit urna et neque. Cras ac ipsum ipsum. Praesent tempor porttitor imperdiet. Vivamus quis pellentesque quam, eget convallis purus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis, ex in semper rutrum, nulla ante
+                mollis massa, eu ullamcorper justo lacus sit amet enim. Sed convallis dapibus felis, nec convallis orci
+                efficitur eu. Nulla id ex ut mi pharetra malesuada. Fusce at odio ac lorem vestibulum congue. Vestibulum
+                ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras et eros ut magna
+                malesuada tincidunt sit amet ac purus. Morbi sollicitudin elementum ornare. Morbi lacinia suscipit
+                dignissim. Fusce mollis eu neque sed tincidunt. Aliquam lectus arcu, interdum cursus dolor eu, ultrices
+                dictum nisi. Ut et dolor facilisis, pellentesque elit vel, pretium risus. Praesent viverra, risus non
+                efficitur dignissim, ligula sapien rhoncus lorem, vel elementum elit urna et neque. Cras ac ipsum ipsum.
+                Praesent tempor porttitor imperdiet. Vivamus quis pellentesque quam, eget convallis purus.</p>
             <a href="book-table">Book a table now</a>
         </article>
 
         <article class="openingHours">
             <h2>Opening Hours</h2>
             <img src="opening-hours.webp" alt="opening-hours">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis, ex in semper rutrum, nulla ante mollis massa, eu ullamcorper justo lacus sit amet enim. Sed convallis dapibus felis, nec convallis orci efficitur eu. Nulla id ex ut mi pharetra malesuada. Fusce at odio ac lorem vestibulum congue. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras et eros ut magna malesuada tincidunt sit amet ac purus. Morbi sollicitudin elementum ornare. Morbi lacinia suscipit dignissim. Fusce mollis eu neque sed tincidunt. Aliquam lectus arcu, interdum cursus dolor eu, ultrices dictum nisi. Ut et dolor facilisis, pellentesque elit vel, pretium risus. Praesent viverra, risus non efficitur dignissim, ligula sapien rhoncus lorem, vel elementum elit urna et neque. Cras ac ipsum ipsum. Praesent tempor porttitor imperdiet. Vivamus quis pellentesque quam, eget convallis purus.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla facilisis, ex in semper rutrum, nulla ante
+                mollis massa, eu ullamcorper justo lacus sit amet enim. Sed convallis dapibus felis, nec convallis orci
+                efficitur eu. Nulla id ex ut mi pharetra malesuada. Fusce at odio ac lorem vestibulum congue. Vestibulum
+                ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Cras et eros ut magna
+                malesuada tincidunt sit amet ac purus. Morbi sollicitudin elementum ornare. Morbi lacinia suscipit
+                dignissim. Fusce mollis eu neque sed tincidunt. Aliquam lectus arcu, interdum cursus dolor eu, ultrices
+                dictum nisi. Ut et dolor facilisis, pellentesque elit vel, pretium risus. Praesent viverra, risus non
+                efficitur dignissim, ligula sapien rhoncus lorem, vel elementum elit urna et neque. Cras ac ipsum ipsum.
+                Praesent tempor porttitor imperdiet. Vivamus quis pellentesque quam, eget convallis purus.</p>
         </article>
     </section>
     <div class="footer-line"></div>
@@ -68,5 +102,6 @@
         </div>
     </footer>
 
-    </body>
+</body>
+
 </html>
